--- a/petsitting-master/index1.html
+++ b/petsitting-master/index1.html
@@ -52,7 +52,7 @@
             <div class="social-media">
               <p class="mb-0 d-flex">
                 <a
-                  href="login.html"
+                  href="views/login.html"
                   class="d-flex align-items-center justify-content-center"
                   style="color: #fcfcfc"
                   >Login</a
